<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#903ba593"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/sayi_giriniz1"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="76dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/sayi_giriniz"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="DuplicateIds,RtlCompat" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        android:background="@drawable/buton_selector"
        android:text="@string/topla"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="324dp"
        android:layout_height="82dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-212dp"
        android:gravity="center"
        android:text="@string/cevap"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:background="@drawable/buton_tasarim"
        android:text="@string/kar"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2"
        android:background="@drawable/buton_tasarim2"
        android:text="@string/arp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:background="@drawable/buton_tasarim"
        android:text="@string/b_l"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button4"
        android:background="@drawable/buton_selector"
        android:text="@string/temizle"
        tools:ignore="RtlCompat" />

</RelativeLayout>